회원가입, 이메일, 전화번호검증 고려 디자인 및 API 설정
