# src/main/java/com/teenyfin/teenymoney/domain/auth/dto/request/PhoneVerificationSendRequestDTO.java
@@ -1,0 +1,20 @@
+package com.teenyfin.teenymoney.domain.auth.dto.request;
+
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.Pattern;
+
+@Getter
+@Setter
+@NoArgsConstructor
+public class PhoneVerificationSendRequestDTO {
+
+    @NotBlank(message = "휴대폰 번호는 필수입니다.")
+    @Pattern(
+            regexp = "^01[016789]-?\\d{3,4}-?\\d{4}$",
+            message = "휴대폰 번호 형식이 올바르지 않습니다.")
+    private String phoneNumber;
+}
